--- a/agendar.html
+++ b/agendar.html
@@ -25,7 +25,7 @@
                     </a>
                     <a href="changelog.html" class="changelog-btn" title="Ver Histórico de Versões">
                         <i class="fas fa-history"></i>
-                        <span>v3.4.0</span>
+                        <span>v3.5.0</span>
                     </a>
                 </div>
             </div>
@@ -96,11 +96,11 @@
                             2. Digite este código na seção "Receber Dados"<br>
                             3. Seus dados serão sincronizados automaticamente<br>
                             <br>
-                            <em>⚠️ Este código expira em 15 minutos</em>
+                            <em>⚠️ Este código expira em 24 horas</em>
                         </p>
                         <div class="code-timer">
                             <i class="fas fa-clock"></i>
-                            <span id="code-timer">15:00</span>
+                            <span id="code-timer">24:00:00</span>
                         </div>
                     </div>
                 </div>
