--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         
         <div class="version-info">
             <p>Sistema completo de lembretes com notificações</p>
-            <span class="version-badge">v3.4.0</span>
+                                <span class="version">v3.5.0</span>
         </div>
     </div>
 
