--- a/changelog.html
+++ b/changelog.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Histórico de versões e atualizações do sistema de lembretes de aniversários.">
+    <meta name="theme-color" content="#667eea">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="Aniversários">
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 180 180'><rect width='180' height='180' rx='15%' fill='%23667eea'/><text x='50%' y='50%' font-size='100' text-anchor='middle' dominant-baseline='central'>🎂</text></svg>">
     <title>📋 Changelog - Lembrete de Aniversários</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script defer src="https://unpkg.com/@vercel/analytics@latest/dist/index.js"></script>
     <style>
         /* Reset e configurações gerais */
         * {
@@ -486,73 +492,6 @@
         // Dados das versões
         const changelogData = [
             {
-                version: "3.5.0",
-                date: "2025-09-19",
-                title: "🚀 Melhorias Significativas de Layout e Sincronização",
-                description: "Grandes melhorias na responsividade mobile e sistema de sincronização completamente reformulado com JSONBin.io",
-                categories: [
-                    {
-                        name: "🎨 Layout e Responsividade",
-                        changes: [
-                            { type: "fixed", text: "<strong>Modal de Sincronização:</strong> Corrigido z-index para sempre aparecer por cima" },
-                            { type: "improved", text: "<strong>Responsividade Mobile:</strong> Formulários agora se ajustam perfeitamente em telas pequenas" },
-                            { type: "fixed", text: "<strong>Inputs Mobile:</strong> Corrigido problema de campos saindo da tela em dispositivos móveis" },
-                            { type: "improved", text: "<strong>Interface Touch:</strong> Melhorado tamanho de botões e campos para dispositivos touch" }
-                        ]
-                    },
-                    {
-                        name: "☁️ Sistema de Sincronização Aprimorado",
-                        changes: [
-                            { type: "new", text: "<strong>JSONBin.io:</strong> Migrado para serviço mais confiável que jsonstore.io" },
-                            { type: "improved", text: "<strong>Duração Estendida:</strong> Códigos de pareamento agora duram 24 horas (antes: 15 min)" },
-                            { type: "improved", text: "<strong>Mensagens Específicas:</strong> Erros agora indicam problema exato (conexão, código expirado, etc.)" },
-                            { type: "new", text: "<strong>Melhor Rastreamento:</strong> Sistema aprimorado para gerenciar Bin IDs" },
-                            { type: "improved", text: "<strong>Fallback Inteligente:</strong> Se cloud falhar, usa localStorage automaticamente" }
-                        ]
-                    },
-                    {
-                        name: "🛠️ Melhorias Técnicas",
-                        changes: [
-                            { type: "improved", text: "<strong>Performance:</strong> Carregamento mais rápido e eficiente" },
-                            { type: "improved", text: "<strong>Confiabilidade:</strong> Melhor tratamento de erros de conexão" },
-                            { type: "improved", text: "<strong>Compatibilidade:</strong> Testado em mais dispositivos e navegadores" }
-                        ]
-                    }
-                ]
-            },
-            {
-                version: "3.4.0",
-                date: "2025-09-19",
-                type: "major",
-                description: "Sistema de sincronização em nuvem com código de pareamento",
-                changes: [
-                    {
-                        type: "added",
-                        text: "**SINCRONIZAÇÃO EM NUVEM**: Sistema completo de pareamento entre dispositivos"
-                    },
-                    {
-                        type: "added",
-                        text: "**CÓDIGO DE PAREAMENTO**: Gere códigos de 6 dígitos para sincronizar dados automaticamente"
-                    },
-                    {
-                        type: "added",
-                        text: "**INTERFACE DE SINCRONIZAÇÃO**: Seção dedicada com status em tempo real e indicadores visuais"
-                    },
-                    {
-                        type: "added",
-                        text: "**TIMER DE EXPIRAÇÃO**: Códigos expiram em 15 minutos por segurança"
-                    },
-                    {
-                        type: "added",
-                        text: "**BACKUP DE EMERGÊNCIA**: Sistema de restauração com frase mágica hardcoded"
-                    },
-                    {
-                        type: "improved",
-                        text: "**UX MELHORADA**: Confirmação antes de sincronizar e feedback visual completo"
-                    }
-                ]
-            },
-            {
                 version: "3.3.0",
                 date: "2025-09-19",
                 type: "minor",
@@ -1016,5 +955,8 @@
             renderChangelog();
         });
     </script>
+    
+    <!-- Vercel Analytics -->
+    <script type="module" src="analytics.js"></script>
 </body>
 </html>
